--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,7 +4,7 @@ name: deploy
 jobs:
   deploy:
     name: deploy de prueba
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - run: echo "Ejecutamos nuestro workflow"
       - uses: actions/checkout@v2
